--- a/index.html
+++ b/index.html
@@ -171,6 +171,5 @@
       authDomain: "bros-hub-cdbf2.firebaseapp.com",
       projectId: "bros-hub-cdbf2",
       storageBucket: "bros-hub-cdbf2.firebasestorage.app",
-      messagingSenderId: "704367128264
-
-
+      messagingSenderId: "704367128264",
+      appId: "1:704367128264:web:2234b7b809
